--- a/src/components/cijepljenje/cijepljeni.css
+++ b/src/components/cijepljenje/cijepljeni.css
@@ -10,11 +10,10 @@
     padding-bottom: 15px !important;
     box-shadow: 0px 5px 8px -3px rgba(0, 0, 0, 0.14);
   }
-  .table-djelatnosti {
+  .table-cijepljeni {
     margin-top: 50px;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 900px;
+    margin-left: 270px;
+    max-width: calc(100% - 270px);
     min-width: 500px;
   }
   .naslov {
@@ -26,5 +25,21 @@
     margin-left: auto !important;
     margin-left: auto !important;
     display: block !important;
+  }
+
+  .selectc {
+    padding: 5px !important;
+    border: none !important;
+    outline: none !important;
+    min-width: 200px !important;
+    margin-top: 50px !important;
+    margin-left: 270px !important;
+    position: relative !important;
+    overflow: hidden !important;
+    cursor: pointer !important;
+    border-radius: 30px !important;
+    text-align: center !important;
+    box-shadow: 0 6px 20px -5px rgba(0,0,0,0.4) !important;
+    background: lightgray;
   }
   
