--- a/src/components/testiranje/testiranje.css
+++ b/src/components/testiranje/testiranje.css
@@ -13,6 +13,7 @@
   .table-testiranje {
     margin-top: 50px;
     margin-left: 270px;
+    margin-bottom: 50px;
     max-width: calc(100% - 270px);
     min-width: 500px;
   }
