--- a/src/components/testiranje/povijest_testiranja.css
+++ b/src/components/testiranje/povijest_testiranja.css
@@ -13,6 +13,7 @@
   .table-povijest-testiranja {
     margin-top: 50px;
     margin-left: 270px;
+    margin-bottom: 50px;
     max-width: calc(100% - 270px);
     min-width: 500px;
   }
